// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bigHandEx snapshots test 1`] = `
<div
  className="cardDeck card-group"
>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      2
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      spades
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      4
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      hearts
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      2
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      diamonds
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      5
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      hearts
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      3
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      hearts
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      2
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      clubs
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      2
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      hearts
    </div>
  </div>
</div>
`;

exports[`noCardHandEx snapshots test 1`] = `
<div
  className="cardDeck card-group"
/>
`;

exports[`regHandEx snapshots test 1`] = `
<div
  className="cardDeck card-group"
>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      6
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      diamonds
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      4
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      hearts
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      8
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      clubs
    </div>
  </div>
</div>
`;

exports[`singleCardHandEx snapshots test 1`] = `
<div
  className="cardDeck card-group"
>
  <div
    className="card"
  >
    <div
      className="card-title h5"
    >
      2
    </div>
    <div
      className="card-title h5"
    >
       of
    </div>
    <div
      className="card-title h5"
    >
      spades
    </div>
  </div>
</div>
`;
